--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "private": true,
   "scripts": {
     "stripe": "node -r dotenv/config -r ts-node/register src/stripe.ts",
+    "cronscheduledbasic": "node -r dotenv/config -r ts-node/register src/cronScheduledBasic.ts",
+    "delayexamplejoke": "node -r dotenv/config -r ts-node/register src/delayExampleJoke.ts",
+    "githubissuereminder": "node -r dotenv/config -r ts-node/register src/gitHubIssueReminder.ts",
+    "githubnewissueopened": "node -r dotenv/config -r ts-node/register src/gitHubNewIssueOpened.ts",
+    "githubnewstartoslack": "node -r dotenv/config -r ts-node/register src/gitHubNewStarToSlack.ts",
+    "openaigenerateimage": "node -r dotenv/config -r ts-node/register src/openAiGenerateImage.ts",
+    "openaitellmeajoke": "node -r dotenv/config -r ts-node/register src/openAiTellMeAJoke.ts",
+    "resendsendbasicemail": "node -r dotenv/config -r ts-node/register src/resendSendBasicEmail.ts",
+    "scheduledintervalbasic": "node -r dotenv/config -r ts-node/register src/scheduledIntervalBasic.ts",
+    "slackPostMessage": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
   },
   "dependencies": {
