Tested jobs and made a few tweaks

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 TRIGGER_API_KEY=
-TRIGGER_API_URL=https://api.trigger.dev
+TRIGGER_API_URL=https://cloud.trigger.dev
+OPENAI_API_KEY=
+RESEND_API_KEY=
