Added dashes to package.json so it’s easier to read

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "stripe": "node -r dotenv/config -r ts-node/register src/stripe.ts",
-    "cronscheduledbasic": "node -r dotenv/config -r ts-node/register src/cronScheduledBasic.ts",
-    "delayexamplejoke": "node -r dotenv/config -r ts-node/register src/delayExampleJoke.ts",
-    "githubissuereminder": "node -r dotenv/config -r ts-node/register src/gitHubIssueReminder.ts",
-    "githubnewissueopened": "node -r dotenv/config -r ts-node/register src/gitHubNewIssueOpened.ts",
-    "githubnewstartoslack": "node -r dotenv/config -r ts-node/register src/gitHubNewStarToSlack.ts",
-    "openaigenerateimage": "node -r dotenv/config -r ts-node/register src/openAIGenerateImage.ts",
-    "openaitellmeajoke": "node -r dotenv/config -r ts-node/register src/openAITellMeAJoke.ts",
-    "resendsendbasicemail": "node -r dotenv/config -r ts-node/register src/resendSendBasicEmail.ts",
-    "scheduledintervalbasic": "node -r dotenv/config -r ts-node/register src/scheduledIntervalBasic.ts",
-    "slackpostmessage": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
+    "cron-scheduled-basic": "node -r dotenv/config -r ts-node/register src/cronScheduledBasic.ts",
+    "delay-example-joke": "node -r dotenv/config -r ts-node/register src/delayExampleJoke.ts",
+    "github-issue-reminder": "node -r dotenv/config -r ts-node/register src/gitHubIssueReminder.ts",
+    "github-new-issue-opened": "node -r dotenv/config -r ts-node/register src/gitHubNewIssueOpened.ts",
+    "github-new-star-to-slack": "node -r dotenv/config -r ts-node/register src/gitHubNewStarToSlack.ts",
+    "open-ai-generate-image": "node -r dotenv/config -r ts-node/register src/openAIGenerateImage.ts",
+    "open-ai-tell-me-a-joke": "node -r dotenv/config -r ts-node/register src/openAITellMeAJoke.ts",
+    "resend-send-basic-email": "node -r dotenv/config -r ts-node/register src/resendSendBasicEmail.ts",
+    "scheduled-interval-basic": "node -r dotenv/config -r ts-node/register src/scheduledIntervalBasic.ts",
+    "slack-post-message": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
   },
   "dependencies": {
