--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "resend-send-basic-email": "node -r dotenv/config -r ts-node/register src/resendSendBasicEmail.ts",
     "scheduled-interval-basic": "node -r dotenv/config -r ts-node/register src/scheduledIntervalBasic.ts",
     "slack-post-message": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
+    "sendgrid-send-email": "node -r dotenv/config -r ts-node/register src/sendGridEmail.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
   },
   "dependencies": {
@@ -24,7 +25,7 @@
     "@trigger.dev/plain": "^2.0.10",
     "@trigger.dev/resend": "^2.0.10",
     "@trigger.dev/sdk": "^2.0.10",
-    "@trigger.dev/sendgrid": "^2.0.10",
+    "@trigger.dev/sendgrid": "^2.0.14",
     "@trigger.dev/slack": "^2.0.10",
     "@trigger.dev/stripe": "^2.0.10",
     "@trigger.dev/supabase": "^2.0.10",
