Hide API key from public file, move to .env

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ TRIGGER_API_KEY=
 TRIGGER_API_URL=https://cloud.trigger.dev
 OPENAI_API_KEY=
 RESEND_API_KEY=
-SENDGRID_API_KEY=
+SENDGRID_API_KEY=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
