--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-TRIGGER_API_KEY=
+# Copy this file and rename to .env, then populate it with your keys
+# Do not commit this example file with your API keys, because they will be made public
+
 TRIGGER_API_URL=https://cloud.trigger.dev
+TRIGGER_API_KEY=
 OPENAI_API_KEY=
 RESEND_API_KEY=
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=
