Renamed to SendGridSendBasicEmail and updated the tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,7 @@
   },
   "compilerOptions": {
     // typescript options here
-  }
+    "jsx": "preserve"
+  },
+  "include": ["**/*.ts", "**/*.tsx"]
 }
