Made the .env.example instructions even clearer and added supabase

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-# Copy this file and rename to .env, then populate it with your keys
-# Do not commit this example file with your API keys, because they will be made public
+# Copy this file and rename to .env, then populate it with your own keys
+
+# DO NOT COMMIT THIS EXAMPLE FILE WITH YOUR OWN API KEYS, THEY WILL BE MADE PUBLIC
 
 TRIGGER_API_URL=https://cloud.trigger.dev
 TRIGGER_API_KEY=
 OPENAI_API_KEY=
 RESEND_API_KEY=
 SENDGRID_API_KEY=
+SUPABASE_PUBLIC_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+STRIPE_API_KEY=
