--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "email dev",
     "stripe": "node -r dotenv/config -r ts-node/register src/stripe.ts",
     "cron-scheduled-basic": "node -r dotenv/config -r ts-node/register src/cronScheduledBasic.ts",
     "delay-example-joke": "node -r dotenv/config -r ts-node/register src/delayExampleJoke.ts",
@@ -13,23 +14,29 @@
     "open-ai-tell-me-a-joke": "node -r dotenv/config -r ts-node/register src/openAITellMeAJoke.ts",
     "resend-send-basic-email": "node -r dotenv/config -r ts-node/register src/resendSendBasicEmail.ts",
     "scheduled-interval-basic": "node -r dotenv/config -r ts-node/register src/scheduledIntervalBasic.ts",
+    "sendgrid-send-basic-email": "node -r dotenv/config -r ts-node/register src/sendGridEmail.ts",
     "slack-post-message": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
-    "sendgrid-send-email": "node -r dotenv/config -r ts-node/register src/sendGridEmail.ts",
+    "supabase-stripe-update-database": "node -r dotenv/config -r ts-node/register src/supabaseStripeUpdateDatabase.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
   },
   "dependencies": {
-    "@trigger.dev/cli": "^2.0.10",
-    "@trigger.dev/express": "^2.0.10",
-    "@trigger.dev/github": "^2.0.10",
-    "@trigger.dev/openai": "^2.0.10",
-    "@trigger.dev/plain": "^2.0.10",
-    "@trigger.dev/resend": "^2.0.10",
-    "@trigger.dev/sdk": "^2.0.10",
+    "@supabase/auth-helpers-nextjs": "^0.7.1",
+    "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.26.0",
+    "@trigger.dev/cli": "^2.0.14",
+    "@trigger.dev/express": "^2.0.14",
+    "@trigger.dev/github": "^2.0.14",
+    "@trigger.dev/openai": "^2.0.14",
+    "@trigger.dev/plain": "^2.0.14",
+    "@trigger.dev/resend": "^2.0.14",
+    "@trigger.dev/sdk": "^2.0.14",
     "@trigger.dev/sendgrid": "^2.0.14",
-    "@trigger.dev/slack": "^2.0.10",
-    "@trigger.dev/stripe": "^2.0.10",
-    "@trigger.dev/supabase": "^2.0.10",
-    "@trigger.dev/typeform": "^2.0.10",
+    "@trigger.dev/slack": "^2.0.14",
+    "@trigger.dev/stripe": "^2.0.14",
+    "@trigger.dev/supabase": "^2.0.14",
+    "@trigger.dev/typeform": "^2.0.14",
+    "react-dom": "^18.2.0",
     "zod": "3.21.4"
   },
   "trigger.dev": {
@@ -37,6 +44,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.5.4",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
