Added Resend drip campaign

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "open-ai-tell-me-a-joke": "node -r dotenv/config -r ts-node/register src/openAITellMeAJoke.ts",
     "plain-update-customer": "node -r dotenv/config -r ts-node/register src/plainUpdateCustomer.ts",
     "resend-send-basic-email": "node -r dotenv/config -r ts-node/register src/resendSendBasicEmail.ts",
+    "resend-send-react-email": "node -r dotenv/config -r ts-node/register src/resendSendReactEmail.tsx",
+    "resend-drip-campaign": "node -r dotenv/config -r ts-node/register src/resendDripCampaign.tsx",
     "scheduled-interval-basic": "node -r dotenv/config -r ts-node/register src/scheduledIntervalBasic.ts",
     "sendgrid-send-basic-email": "node -r dotenv/config -r ts-node/register src/sendGridEmail.ts",
     "slack-post-message": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
     "stripe-on-subscription-created": "node -r dotenv/config -r ts-node/register src/stripeOnSubscriptionCreated.ts",
     "supabase-stripe-update-database": "node -r dotenv/config -r ts-node/register src/supabaseStripeUpdateDatabase.ts",
-    "resend-send-react-email": "node -r dotenv/config -r ts-node/register src/resendSendReactEmail.tsx",
     "weekly-user-activity-summary": "node -r dotenv/config -r ts-node/register src/weeklyUserActivitySummary.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
   },
