Updated the env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Copy this file and rename to .env, then populate it with your own keys
 
-# DO NOT COMMIT THIS EXAMPLE FILE WITH YOUR OWN API KEYS, THEY WILL BE MADE PUBLIC
+# DO NOT COMMIT THIS EXAMPLE FILE WITH YOUR OWN API KEYS BECAUSE THEY WILL BE MADE PUBLIC
 
 TRIGGER_API_URL=https://cloud.trigger.dev
 TRIGGER_API_KEY=
@@ -10,3 +10,4 @@ SENDGRID_API_KEY=
 SUPABASE_PUBLIC_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 STRIPE_API_KEY=
+PLAIN_API_KEY=
