--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sendgrid-send-basic-email": "node -r dotenv/config -r ts-node/register src/sendGridEmail.ts",
     "slack-post-message": "node -r dotenv/config -r ts-node/register src/slackPostMessage.ts",
     "stripe-on-subscription-created": "node -r dotenv/config -r ts-node/register src/stripeOnSubscriptionCreated.ts",
+    "stripe-new-subscription-update-airtable": "node -r dotenv/config -r ts-node/register src/stripeNewSubscriptionUpdateAirtable.ts",
     "supabase-stripe-update-database": "node -r dotenv/config -r ts-node/register src/supabaseStripeUpdateDatabase.ts",
     "weekly-user-activity-summary": "node -r dotenv/config -r ts-node/register src/weeklyUserActivitySummary.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
@@ -37,18 +38,19 @@
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.26.0",
-    "@trigger.dev/cli": "^2.0.14",
-    "@trigger.dev/express": "^2.0.14",
-    "@trigger.dev/github": "^2.0.14",
-    "@trigger.dev/openai": "^2.0.14",
-    "@trigger.dev/plain": "^2.0.14",
-    "@trigger.dev/resend": "^2.0.14",
-    "@trigger.dev/sdk": "^2.0.14",
-    "@trigger.dev/sendgrid": "^2.0.14",
-    "@trigger.dev/slack": "^2.0.14",
-    "@trigger.dev/stripe": "^2.0.14",
-    "@trigger.dev/supabase": "^2.0.14",
-    "@trigger.dev/typeform": "^2.0.14",
+    "@trigger.dev/airtable": "^2.1.3",
+    "@trigger.dev/cli": "^2.1.3",
+    "@trigger.dev/express": "^2.1.3",
+    "@trigger.dev/github": "^2.1.3",
+    "@trigger.dev/openai": "^2.1.3",
+    "@trigger.dev/plain": "^2.1.3",
+    "@trigger.dev/resend": "^2.1.3",
+    "@trigger.dev/sdk": "^2.1.3",
+    "@trigger.dev/sendgrid": "^2.1.3",
+    "@trigger.dev/slack": "^2.1.3",
+    "@trigger.dev/stripe": "^2.1.3",
+    "@trigger.dev/supabase": "^2.1.3",
+    "@trigger.dev/typeform": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "3.21.4"
