Added Linear and new jobs to the package.json file

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "github-issue-reminder": "node -r dotenv/config -r ts-node/register src/gitHubIssueReminder.ts",
     "github-new-issue-opened": "node -r dotenv/config -r ts-node/register src/gitHubNewIssueOpened.ts",
     "github-new-star-to-slack": "node -r dotenv/config -r ts-node/register src/gitHubNewStarToSlack.ts",
+    "linear-issues-daily-slack-alert": "node -r dotenv/config -r ts-node/register src/linearIssuesDailySlackAlert.ts",
+    "linear-create-issue-on-pr": "node -r dotenv/config -r ts-node/register src/linearCreateIssueOnPR.ts",
+    "linear-new-issue-reply": "node -r dotenv/config -r ts-node/register src/linearNewIssueReply.ts",
     "open-ai-generate-image": "node -r dotenv/config -r ts-node/register src/openAIGenerateImage.ts",
     "open-ai-tell-me-a-joke": "node -r dotenv/config -r ts-node/register src/openAITellMeAJoke.ts",
     "plain-update-customer": "node -r dotenv/config -r ts-node/register src/plainUpdateCustomer.ts",
@@ -42,6 +45,7 @@
     "@trigger.dev/cli": "^2.1.3",
     "@trigger.dev/express": "^2.1.3",
     "@trigger.dev/github": "^2.1.3",
+    "@trigger.dev/linear": "^2.1.5",
     "@trigger.dev/openai": "^2.1.3",
     "@trigger.dev/plain": "^2.1.3",
     "@trigger.dev/resend": "^2.1.3",
