--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,13 @@
 
 TRIGGER_API_URL=https://cloud.trigger.dev
 TRIGGER_API_KEY=
+GITHUB_TOKEN=
+LINEAR_API_KEY=
 OPENAI_API_KEY=
+PLAIN_API_KEY=
 RESEND_API_KEY=
 SENDGRID_API_KEY=
+SLACK_CHANNEL_ID=
+STRIPE_API_KEY=
 SUPABASE_PUBLIC_URL=
 SUPABASE_SERVICE_ROLE_KEY=
-STRIPE_API_KEY=
-PLAIN_API_KEY=
