--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "stripe-new-subscription-update-airtable": "node -r dotenv/config -r ts-node/register src/stripeNewSubscriptionUpdateAirtable.ts",
     "supabase-stripe-update-database": "node -r dotenv/config -r ts-node/register src/supabaseStripeUpdateDatabase.ts",
     "weekly-user-activity-summary": "node -r dotenv/config -r ts-node/register src/weeklyUserActivitySummary.ts",
+    "typeform-new-submission-update-airtable": "node -r dotenv/config -r ts-node/register src/typeformNewSubmissionUpdateAirtable.ts",
     "dev:trigger": "trigger-cli dev --port 8080"
   },
   "dependencies": {
@@ -54,7 +55,7 @@
     "@trigger.dev/slack": "^2.1.3",
     "@trigger.dev/stripe": "^2.1.3",
     "@trigger.dev/supabase": "^2.1.3",
-    "@trigger.dev/typeform": "^2.1.3",
+    "@trigger.dev/typeform": "^2.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "3.21.4"
