--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@trigger.dev/linear": "^2.1.5",
     "@trigger.dev/openai": "^2.1.3",
     "@trigger.dev/plain": "^2.1.3",
+    "@trigger.dev/replicate": "^2.2.5",
     "@trigger.dev/resend": "^2.1.3",
     "@trigger.dev/sdk": "^2.1.3",
     "@trigger.dev/sendgrid": "^2.1.3",
